Revision history for {{$dist->name}}

{{$NEXT}}

0.005     2013-04-28 08:47:40 PDT-0700 (Karen Etheridge)
          - bump version for [Test::Compile] and [Test::CheckDeps] (RT#84900,
            RT#84904, RT#84905)

0.004     2013-04-26 20:56:11 PDT-0700 (Karen Etheridge)
          - fix missing .gitignore in minted dists
          - [-Encoding] podweaver plugin added to this distribution and
            minted dists
          - extra stopwords added, after disabling my local aspell dictionary
          - Pod::Weaver plugins used in this bundle are added as runtime
            prerequisites

0.003     2013-04-21 10:22:48 PDT-0700 (Karen Etheridge)
          - now building ourself with ourselves, [@Author::ETHER].
          - [Test::UnusedVars] added
          - RT mail link cleaned up
          - bump prereqs for Dist::Zilla::Role::PluginBundle::PluginRemover,
            Dist::Zilla::Plugin::Test::CPAN::Changes
          - document the multiple mechanisms for adding stopwords (and add the
            [-Stopwords] weaver plugin, which seems to be needed sometimes)

0.002     2013-04-14 15:40:08 PDT-0700 (Karen Etheridge)
          - do not index our profiles/, to avoid its contents from showing up
            under "Documentation" on metacpan
          - users of [@Author::ETHER] can now -remove plugins

0.001     2013-04-14 13:52:50 PDT-0700 (Karen Etheridge)
          - Initial release.
